# chibi

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PHILOSOPHY.md  README.md  TODO.md  additional-features-plan.md  chibi-repl  cli.example.toml  cliff.toml  config-plan.md  config.example.toml  crates.js  flake.nix  handoff.md  help.html  index.html  justfile  local.example.toml  mcp-bridge.example.toml  models.example.toml  settings.html  src-files.js
chibi/: all.html  enum.ConfigImageRenderMode.html  enum.ImageAlignment.html  fn.build_interactive_permission_handler.html  fn.build_trust_permission_handler.html  fn.confirm_action.html  fn.default_markdown_style.html  fn.execute_from_input.html  fn.extract_home_override.html  fn.extract_project_root_override.html  fn.generate_new_context_name.html  fn.inspect_context.html  fn.load_cli_config.html  fn.main.html  fn.md_config_defaults.html  fn.md_config_from_resolved.html  fn.parse.html  fn.parse_json_input.html  fn.render_markdown_output.html  fn.resolve_cli_config.html  fn.resolve_command_names.html  fn.resolve_context_name.html  fn.select_permission_handler.html  fn.set_prompt_for_context.html  fn.show_log.html  index.html  sidebar-items.js  struct.Cli.html  struct.CliResponseSink.html  struct.ImageConfig.html  struct.ImageConfigOverride.html  struct.MarkdownConfig.html  struct.MarkdownStream.html  struct.OutputHandler.html  struct.PluginInvocation.html  struct.ResolvedConfig.html  struct.Session.html  trait.InspectableExt.html  type.MarkdownStyle.html
chibi_core/: all.html  constant.INBOX_CHECK_PROMPT.html  fn.project_chibi_dir.html  fn.project_index_db_path.html  fn.ratatoskr_version.html  index.html  sidebar-items.js  struct.Chibi.html  struct.LoadOptions.html  type.PermissionHandler.html
chibi_json/: all.html  fn.main.html  fn.run.html  index.html  sidebar-items.js
chibi_mcp_bridge/: all.html  constant.HEARTBEAT_SECS.html  fn.atomic_write.html  fn.chibi_home.html  fn.handle_connection.html  fn.is_lockfile_stale.html  fn.main.html  fn.read_api_key.html  fn.remove_lockfile.html  fn.touch_lockfile.html  fn.write_lockfile.html  index.html  sidebar-items.js  struct.LockContent.html
crates/chibi-cli/: Cargo.toml  build.rs
crates/chibi-cli/src/: cli.rs  config.rs  image_cache.rs  input.rs  json_input.rs  main.rs  markdown.rs  output.rs  session.rs  sink.rs
crates/chibi-cli/tests/: cli_integration.rs
crates/chibi-core/: Cargo.toml
crates/chibi-core/prompts/: chibi.md  compaction.md  rolling-compact-decision.md  rolling-compact-update.md  summarize-content.md
crates/chibi-core/src/: agents_md.rs  cache.rs  chibi.rs  config.rs  context.rs  execution.rs  gateway.rs  inbox.rs  input.rs  json_ext.rs  jsonl.rs  lib.rs  llm.rs  lock.rs  model_info.rs  output.rs  partition.rs  safe_io.rs  site.rs  vcs.rs  vfs_cache.rs
crates/chibi-core/src/api/: compact.rs  logging.rs  mod.rs  request.rs  send.rs  sink.rs
crates/chibi-core/src/index/: indexer.rs  mod.rs  query.rs  schema.rs
crates/chibi-core/src/state/: config_resolution.rs  context_ops.rs  entries.rs  flocks.rs  mod.rs  paths.rs  prompts.rs  tasks.rs  tests.rs
crates/chibi-core/src/tools/: agent_tools.rs  builtin.rs  coding_tools.rs  eval.rs  file_tools.rs  flow.rs  fs_read.rs  fs_write.rs  hooks.rs  index.rs  mcp.rs  memory.rs  mod.rs  network.rs  paths.rs  plugins.rs  registry.rs  security.rs  shell.rs  synthesised.rs  vfs_tools.rs
crates/chibi-core/src/vfs/: backend.rs  caller.rs  contexts_backend.rs  flock.rs  local.rs  mod.rs  path.rs  permissions.rs  tools_backend.rs  types.rs  vfs.rs
crates/chibi-core/tests/: generate_docs.rs  mcp_integration.rs
crates/chibi-json/: Cargo.toml
crates/chibi-json/src/: input.rs  main.rs  output.rs  sink.rs
crates/chibi-json/tests/: integration.rs
crates/chibi-mcp-bridge/: Cargo.toml
crates/chibi-mcp-bridge/prompts/: mcp-tool-summary.md
crates/chibi-mcp-bridge/src/: bridge.rs  cache.rs  config.rs  main.rs  protocol.rs  server.rs  summary.rs
docs/: AGENT_SKILLS_IMPLEMENTATION.md  agentic.md  architecture.md  cli-reference.md  configuration.md  contexts.md  getting-started.md  hooks.md  images.md  markdown-themes.md  mcp-bridge-serena.md  mcp.md  plugins.md  transcript-format.md  upgrade-notes.md  vfs.md  workflow.md
examples/: cli.example.toml  config.example.toml  local.example.toml  mcp-bridge.example.toml
plugins/: history.scm  tasks.scm
search.index/: 0009c1e81558.js  000d8d901c16.js  003b217d4b16.js  003d1d8111b8.js  004852d52507.js  004e43689a36.js  0057a5feff85.js  00a77fb80223.js  00c4aec2409e.js  00e32f92080a.js  01008e2ad7c5.js  0117a5653b67.js  01346bc7197a.js  01363381506f.js  014bebf4cbf1.js  019ae94fe14a.js  01c1f7f30cb6.js  01c9dc219966.js  01f4aa7ee71e.js  021a440e35f6.js  0252cf2e5c86.js  0296308a5621.js  0299a5169cf0.js  02a16c20fcb9.js  02b89543f7de.js  02d4b3620d86.js  02dc68a2b197.js  031ca5e818ef.js  034a579d53ca.js  034ef69c41c2.js  035dc16cd938.js  036adda445b2.js  036fe5828a6e.js  03714d6f10b1.js  0385e5662879.js  03c78a022d91.js  03cf181c8f46.js  03d4ede7a45d.js  03de73fdf2db.js  03eecd9ee415.js  (+1176 more)
src/: api.rs  cache.rs  cli.rs  config.rs  context.rs  image_cache.rs  inbox.rs  input.rs  json_input.rs  llm.rs  lock.rs  main.rs  markdown.rs  output.rs  partition.rs  safe_io.rs  state.rs  tools.rs
streamdown_ansi/: all.html  index.html  sidebar-items.js
streamdown_config/: all.html  constant.DEFAULT_TOML.html  index.html  sidebar-items.js  struct.ComputedStyle.html  struct.Config.html  struct.FeaturesConfig.html  struct.HsvMultiplier.html  struct.StyleConfig.html
streamdown_core/: all.html  index.html  sidebar-items.js
streamdown_parser/: all.html  enum.ListBullet.html  enum.ParseEvent.html  enum.TableState.html  index.html  sidebar-items.js  static.BLOCK_RE.html  static.CODE_FENCE_END_RE.html  static.CODE_FENCE_RE.html  static.HEADING_RE.html  static.HR_RE.html  static.LIST_ITEM_RE.html  static.SPACE_CODE_RE.html  static.TABLE_ROW_RE.html  static.TABLE_SEP_RE.html  struct.Parser.html
streamdown_plugin/: all.html  index.html  (+4 more)
(+1567 files in other folders)
