[workspace]
members = [
    "crates/chibi-core",
    "crates/chibi-cli",
]
resolver = "3"

# These are needed for the vendored streamdown crates which use workspace inheritance
[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["Streamdown Contributors"]
license = "MIT"
repository = "https://github.com/fed-stew/streamdown-rs"
keywords = ["markdown", "terminal", "streaming", "ansi", "cli"]
categories = ["command-line-utilities", "text-processing"]

# Workspace dependencies for streamdown crates
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
unicode-width = "0.2"
syntect = "5.2"
directories = "5.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
regex = "1.10"
crossterm = "0.28"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
atty = "0.2"
nix = { version = "0.29", features = ["fs", "poll", "term", "signal", "process"] }
streamdown-core = { version = "0.1.4", path = "vendor/streamdown-rs/crates/streamdown-core" }
streamdown-ansi = { version = "0.1.4", path = "vendor/streamdown-rs/crates/streamdown-ansi" }
streamdown-config = { version = "0.1.4", path = "vendor/streamdown-rs/crates/streamdown-config" }
streamdown-parser = { version = "0.1.4", path = "vendor/streamdown-rs/crates/streamdown-parser" }
streamdown-syntax = { version = "0.1.4", path = "vendor/streamdown-rs/crates/streamdown-syntax" }
streamdown-render = { version = "0.1.4", path = "vendor/streamdown-rs/crates/streamdown-render" }
streamdown-plugin = { version = "0.1.4", path = "vendor/streamdown-rs/crates/streamdown-plugin" }
reqwest = { version = "0.13.1", features = ["json", "stream"] }

[workspace.lints.rust]
dead_code = "deny"
