[workspace]
members = [
    "crates/chibi-core",
    "crates/chibi-cli",
    "crates/chibi-json",
]
resolver = "3"

[workspace.package]
version = "0.7.1"
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
regex = "1.10"
base64 = "0.22"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
uuid = { version = "1.17", features = ["v4"] }

# Streamdown (git dependency)
streamdown-parser = { git = "https://github.com/emesal/streamdown-rs.git", branch = "emesal/chibi" }
streamdown-render = { git = "https://github.com/emesal/streamdown-rs.git", branch = "emesal/chibi" }

# Ratatoskr (LLM API client)
ratatoskr = { git = "https://github.com/emesal/ratatoskr.git", branch = "main" }

[workspace.lints.rust]
dead_code = "deny"
