[package]
name = "chibi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4"
schemars = "0.8"
dirs-next = "2.0.0"
fastbloom = { version = "0.14", features = ["serde"] }
futures-util = { version = "0.3.31", features = ["std"] }
regex = "1"
reqwest.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
uuid.workspace = true
fs2 = "0.4"
base64 = "0.22"
ignore = "0.4"
ratatoskr.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }

[lints.rust]
dead_code = "deny"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.19"
