[package]
name = "chibi-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "chibi-json"
path = "src/main.rs"

[dependencies]
chibi-core = { path = "../chibi-core" }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }

[lints.rust]
dead_code = "deny"
