[package]
name = "chibi-mcp-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
dirs = "6.0"
libc = "0.2"
rmcp = { version = "0.15", features = ["client", "transport-child-process"] }
ratatoskr.workspace = true
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[lints.rust]
dead_code = "deny"
